Recent changes in the INET Framework
====================================

INET-2.99.1 (May, 2015)
--------------------------

This release is the next development snapshot of the upcoming INET-3.0 version.

The highlights of this release are:

1. Includes a new packet/bit/symbol level physical layer model for the 802.11
   OFDM PHY according to the IEEE 802.11-2012 standard, and a hypothetical
   generic packet/bit/symbol level APSK physical layer model for further
   experimentation. The new implementations include forward error correction
   encoding/decoding, scrambling/descrambling, interleaving/deinterleaving, and
   modulation/demodulation.

2. Contains fixes for more than 300 defects found by Coverity, an online C++
   static code analysis tool. The reported Defect Density is decreased to
   0.5/kLoC which is considered a result. You can find the detailed results at
   https://scan.coverity.com/projects/3472

3. Contains several other memory leak and memory management fixes reported by
   valgrind memcheck.

4. Modernizes C++ source code using new C++11 features such as nullptr, auto
   types, range loop, override, etc.

Read on for further details.

All components:
 - Replaced all variants of findModuleWherever calls with module parameters,
   because their behavior is non-predictable and less composable.
 - Replaced most getParentModule calls with module parameters to make modules
   less dependent on their context, and thus more reusable.
 - Replaced UnimplementedModule and all related *_None modules with calls to
   firstAvailableOrEmpty NED function, and changed affected submodules to be
   present conditionally.
 - Moved interface classes under contract subdirectories. Moved base classes
   under base subdirectories.
 - Introduced a new script called 'inet_featuretool' in the root folder of the
   project that allows listing/enabling/disabling specific features from the
   command line. Use 'inet_featuretool -h' for further info.