@@ -31,7 +31,7 @@ module ThroughputClient
 {
     parameters:
         @display("i=device/wifilaptop");
-        @node();
+        @networkNode();
         *.interfaceTableModule = "";
     gates:
         input radioIn @directIn;
@@ -60,7 +60,7 @@ module ThroughputServer
 {
     parameters:
         @display("i=device/wifilaptop");
-        @node();
+        @networkNode();
         *.interfaceTableModule = "";
     gates:
         input radioIn @directIn;
