@@ -166,7 +166,7 @@ class INET_API NetworkConfiguratorBase : public cSimpleModule, public L3AddressR
 
     /**
      * Extracts network topology by walking through the module hierarchy.
-     * Creates vertices from modules having @node property.
+     * Creates vertices from modules having @networkNode property.
      * Creates edges from connections (wired and wireless) between network interfaces.
      */
     virtual void extractTopology(Topology& topology);
