@@ -42,7 +42,7 @@ void IPv4NodeConfigurator::initialize(int stage)
     if (stage == INITSTAGE_LOCAL) {
         cModule *node = getContainingNode(this);
         if (!node)
-            throw cRuntimeError("The container @node module not found");
+            throw cRuntimeError("The container @networkNode module not found");
         const char *networkConfiguratorPath = par("networkConfiguratorModule");
         nodeStatus = dynamic_cast<NodeStatus *>(node->getSubmodule("status"));
         interfaceTable = getModuleFromPar<IInterfaceTable>(par("interfaceTableModule"), this);
