@@ -36,7 +36,7 @@ module EtherHost2
         string macType = default(csmacdSupport ? "EtherMAC" : "EtherMACFullDuplex"); // ~EtherMAC or ~EtherMACFullDuplex
         string queueType = default(""); // DropTailQueue, DiffServQueue, or "" to use the internal queue
         *.interfaceTableModule = default("");
-        @node();
+        @networkNode();
         @labels(node,ethernet-node);
         @display("i=device/pc2");
     gates:
