@@ -1,6 +1,14 @@
 Recent changes in the INET Framework
 ====================================
 
+INET-3.0.0 (Jun, 2015)
+----------------------
+
+Nodes:
+ - Modules that represent a "node" at network level should be tagged with
+   @networkNode property instead of @node. (The @node property name was
+   too generic.)
+
 INET-2.99.1 (May, 2015)
 --------------------------
 
